Fixed row of boxes alignment

--- a/pages/about_style.css
+++ b/pages/about_style.css
@@ -125,7 +125,7 @@
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
-    align-items: center;
+    align-items: flex-start;
 }
 
 .row-of-boxes__column {
