--- a/styles.css
+++ b/styles.css
@@ -108,7 +108,7 @@
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
-    align-items: center;
+    align-items: flex-start;
 }
 
 .row-of-boxes__column {
